--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <nav id="navbar" class="col-3" role="navigation">
-          <h1>Shay's version of JS Documentation</h1>
+        <nav id="navbar" class="col-3 ml-2" role="navigation">
+          <h1>JS Documentation</h1>
           <ul>
             <li><a class="nav-link" href="#Introduction">Introduction</a></li>
             <li><a class="nav-link" href="#What_you_should_already_know">What you should already know</a></li>
@@ -34,7 +34,7 @@
             <li><a class="nav-link" href="#Reference">Reference</a></li>
           </ul>
         </nav>
-        <main id="main-doc" class="col-9">
+        <main id="main-doc" class="col-8 ml-5">
 
           <!-- First Section -->
           <section id="Introduction" class="main-section">
